--- a/index.html
+++ b/index.html
@@ -3,81 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Artigiano V60.6</title>
+    <title>Artigiano Pro V60</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
-<body>
+<body :class="{'dark-mode': temaEscuro}">
 <div id="app" v-cloak>
-    
-    <div v-if="!sessaoAtiva" class="login-screen">
-        <i class="fas fa-pizza-slice login-logo"></i>
-        <h1 style="font-weight: 800; margin-bottom: 5px;">Artigiano</h1>
-        <p style="color: var(--ios-gray); margin-bottom: 40px;">Gestão Profissional V60.6</p>
-        <input v-model="loginUser" class="login-input" placeholder="Utilizador">
-        <input v-model="loginPass" type="password" class="login-input" placeholder="Senha">
-        <button @click="fazerLogin" class="btn-action btn-vermelho">Aceder ao Sistema</button>
+
+    <div v-if="loadingInicial" class="ios-loading">
+        <i class="fas fa-pizza-slice fa-spin"></i>
+        <p>L'Artigiano Gestione...</p>
     </div>
 
-    <div v-else class="app-layout">
-        <header class="app-header">
-            <div class="header-title"><span>L'</span>Artigiano<i class="fas fa-circle-check"></i></div>
-            <button @click="logout" style="border:none; background:none; font-size: 18px; color: var(--ios-red);">Sair</button>
+    <div v-else-if="!sessaoAtiva" class="login-container">
+        <div class="login-card">
+            <div class="italy-stripe"></div>
+            <i class="fas fa-pizza-slice logo-icon"></i>
+            <h1>Artigiano</h1>
+            <p>Controle de Estoque e Produção</p>
+            <div class="login-form">
+                <input v-model="loginUser" placeholder="Usuário" class="ios-input">
+                <input v-model="loginPass" type="password" placeholder="Senha" class="ios-input">
+                <button @click="fazerLogin" class="btn-entrar">ENTRAR</button>
+            </div>
+        </div>
+    </div>
+
+    <div v-else class="app-content">
+        <header class="ios-header">
+            <div class="header-top">
+                <span class="welcome">Ciao, <b>{{ usuarioLogado.nome }}</b></span>
+                <div class="header-actions">
+                    <button @click="temaEscuro = !temaEscuro"><i class="fas" :class="temaEscuro ? 'fa-sun' : 'fa-moon'"></i></button>
+                    <button @click="logout"><i class="fas fa-sign-out-alt"></i></button>
+                </div>
+            </div>
+            <h1 class="page-title" v-if="!moduloAtivo">Dashboard</h1>
+            <h1 class="page-title" v-else>{{ moduloAtivo.toUpperCase() }}</h1>
         </header>
 
-        <main>
-            <div v-if="!moduloAtivo" class="dashboard">
-                <div class="dash-card" @click="moduloAtivo = 'producao'">
-                    <span v-if="diaSemana === 1" class="badge-hoje">HOJE!</span>
-                    <i class="fas fa-calculator" style="color: var(--ios-green);"></i>
-                    <b>Massa</b>
+        <main class="ios-main">
+            <div v-if="!moduloAtivo" class="grid-menu">
+                <div class="menu-item green" @click="moduloAtivo = 'producao'">
+                    <i class="fas fa-calculator"></i>
+                    <span>Massas</span>
                 </div>
-                <div class="dash-card" @click="moduloAtivo = 'hortifruti'">
-                    <span class="badge-hoje">DIÁRIO</span>
-                    <i class="fas fa-leaf" style="color: var(--ios-red);"></i>
-                    <b>Hortifruti</b>
+                <div class="menu-item red" @click="moduloAtivo = 'hortifruti'">
+                    <i class="fas fa-leaf"></i>
+                    <span>Hortifruti</span>
                 </div>
-                <div class="dash-card" @click="moduloAtivo = 'geral'">
-                    <span v-if="diaSemana === 1" class="badge-hoje">SEGUNDA</span>
-                    <i class="fas fa-box-open" style="color: var(--ios-green);"></i>
-                    <b>Estoque</b>
+                <div class="menu-item green" @click="moduloAtivo = 'geral'">
+                    <i class="fas fa-boxes-stacked"></i>
+                    <span>Geral</span>
                 </div>
-                <div class="dash-card" @click="moduloAtivo = 'bebidas'">
-                    <i class="fas fa-glass-water" style="color: var(--ios-red);"></i>
-                    <b>Bebidas</b>
+                <div class="menu-item red" @click="moduloAtivo = 'bebidas'">
+                    <i class="fas fa-wine-glass"></i>
+                    <span>Bebidas</span>
+                </div>
+                <div v-if="usuarioLogado.permissoes.admin" class="menu-item dark" @click="moduloAtivo = 'admin'">
+                    <i class="fas fa-cog"></i>
+                    <span>Ajustes</span>
                 </div>
             </div>
 
-            <div v-else class="inventory-view">
-                <div style="padding: 20px;">
-                    <button @click="moduloAtivo = null" style="background:none; border:none; color: var(--ios-blue); font-size: 17px;">
-                        <i class="fas fa-chevron-left"></i> Categorias
-                    </button>
-                    <h2 style="font-size: 28px; font-weight: 700; margin: 15px 0;">{{ moduloAtivo.toUpperCase() }}</h2>
+            <div v-if="moduloAtivo === 'producao'" class="module-container">
+                <button class="btn-back" @click="moduloAtivo = null"><i class="fas fa-chevron-left"></i> Voltar</button>
+                <div class="ios-card">
+                    <h3>Calculadora de Lote</h3>
+                    <select v-model="loteSelecionado" class="ios-select">
+                        <option v-for="n in [15, 30, 45, 60, 75, 90, 105]" :value="n">{{ n }} unidades</option>
+                    </select>
+                    <div class="recipe-grid">
+                        <div class="recipe-item"><span>Farinha:</span> <b>{{ (loteSelecionado * 133).toFixed(0) }}g</b></div>
+                        <div class="recipe-item"><span>Água (70%):</span> <b>{{ ((loteSelecionado * 83) * 0.7).toFixed(0) }}ml</b></div>
+                        <div class="recipe-item"><span>Gelo (30%):</span> <b>{{ ((loteSelecionado * 83) * 0.3).toFixed(0) }}g</b></div>
+                    </div>
                 </div>
+            </div>
 
-                <div class="inventory-container">
-                    <div v-for="item in itensFiltrados" :key="item.id" class="item-card">
-                        <div class="item-info">
-                            <span class="item-name">{{ item.nome }}</span>
-                            <span class="item-meta">Meta: {{ item.meta }} {{ item.unC }}</span>
-                        </div>
-                        <div class="locais-grid">
-                            <div v-for="local in config.rota" :key="local" class="input-group">
-                                <label>{{ local }}</label>
-                                <input type="number" 
-                                       :value="item.contagem ? item.contagem[local] : ''"
-                                       @input="salvarContagem(item.id, local, $event.target.value)">
-                            </div>
+            <div v-if="['hortifruti', 'geral', 'bebidas'].includes(moduloAtivo)" class="module-container">
+                <button class="btn-back" @click="moduloAtivo = null"><i class="fas fa-chevron-left"></i> Voltar</button>
+                <div v-for="item in itensFiltrados" :key="item.id" class="inventory-card">
+                    <div class="inv-header">
+                        <strong>{{ item.nome }}</strong>
+                        <span>Meta: {{ item.meta }}</span>
+                    </div>
+                    <div class="inv-inputs">
+                        <div v-for="local in config.rota" :key="local" class="input-box">
+                            <label>{{ local }}</label>
+                            <input type="number" :value="item.contagem ? item.contagem[local] : ''" 
+                                   @input="salvarContagem(item.id, local, $event.target.value)">
                         </div>
                     </div>
                 </div>
-
-                <div class="footer-actions">
-                    <button v-for="d in config.destinos" @click="enviarZap(d)" class="btn-action btn-verde">
+                <div class="order-section">
+                    <button v-for="d in config.destinos" @click="enviarZap(d)" class="btn-whatsapp">
                         <i class="fab fa-whatsapp"></i> Pedir para {{ d.nome }}
                     </button>
                 </div>
